テキスト修正

--- a/dev/src/ejs/index.ejs
+++ b/dev/src/ejs/index.ejs
@@ -50,13 +50,15 @@
 						<div class="section__mv__text__content">_
 								<span class="mask">
 									<span class="mask__element">
-										これだけモノに溢れた現代において、<br>
-										本物の価値に出会うことは幸せなことだと思う。<br>
-										この上質なモノの価値や佇まいを、次の人へ伝え、継承していく。<br>
-										そして、バトンパスによって、ストーリーは続いていく。<br>
-										私たちが目指すのは、上質なモノが身近にある循環型の社会。<br>
-										確かな価値との新しい出会い、リユースでつないでいく未来。<br>
-										そんなストーリーのサイクルを、人の手で受け継がれる日常を。
+										<strong>
+											これだけモノに溢れた現代において、<br>
+											本物の価値に出会うことは幸せなことだと思う。<br>
+											この上質なモノの価値や佇まいを、次の人へ伝え、継承していく。<br>
+											そして、バトンパスによって、ストーリーは続いていく。<br>
+											私たちが目指すのは、上質なモノが身近にある循環型の社会。<br>
+											確かな価値との新しい出会い、リユースでつないでいく未来。<br>
+											そんなストーリーのサイクルを、人の手で受け継がれる日常を。
+										</strong>
 									</span>
 								</span>_
 						</div>
@@ -69,41 +71,37 @@
 					<div class="wrap">
 						<section class="mind mind--main ">
 							<h2 class="mind__index js-effect">
-								<span class="mask"><span class="mask__element">自分にも、家族にも、誇れる会社を。</span></span>
+								自分にも、家族にも、誇れる会社を。
 							</h2>
-							<div class="mind__content js-effect">
-								<span class="mask">
-									<span class="mask__element">
-										多様な働き方がある現代において、仕事は自己実現の手段にもなってきています。<br>
-										自分の仕事・働く会社について、友人や家族、そして我が子に胸を張って語れるだろうか？<br>
-										ひとりの専門家として、ひとりの社会人として、この世の中に貢献していく。<br>
-										私たちに関わるすべての人に、堂々と誇れる会社を、それが私たちの目指す姿です。
-									</span>
-								</span>
+							<div class="mind__content js-effect">								
+								多様な働き方がある現代において、仕事は自己実現の手段にもなってきています。<br>
+								自分の仕事・働く会社について、友人や家族、そして我が子に胸を張って語れるだろうか？<br>
+								ひとりの専門家として、ひとりの社会人として、この世の中に貢献していく。<br>
+								私たちに関わるすべての人に、堂々と誇れる会社を、それが私たちの目指す姿です。									
 							</div>
 						</section>
 						<section class="mind mind--sub">
 							<header class="mind__index js-effect">
-								<span class="mask"><span class="mask__element">VISION</span></span>
+								VISION
 							</header>
 							<div class="mind__content js-effect">
-								<span class="mask"><span class="mask__element">価値あるモノが継承される循環型の社会。</span></span>
+								価値あるモノが継承される循環型の社会。
 							</div>
 						</section>
 						<section class="mind mind--sub">
 							<header class="mind__index js-effect">
-								<span class="mask"><span class="mask__element">MISSION</span></span>
+								MISSION
 							</header>
 							<div class="mind__content js-effect">
-								<span class="mask"><span class="mask__element">リユースをより身近に、イメージの一新を。</span></span>
+								リユースをより身近に、イメージの一新を。
 							</div>
 						</section>
 						<section class="mind mind--sub">
 							<header class="mind__index js-effect">
-								<span class="mask"><span class="mask__element">VALUE</span></span>
+								VALUE
 							</header>
 							<div class="mind__content js-effect">
-								<span class="mask"><span class="mask__element">本物との出会いを、お客様の日常に。</span></span>
+								本物との出会いを、お客様の日常に。
 							</div>
 						</section>
 					</div>
@@ -129,7 +127,7 @@
 									<p>
 										<span class="mask">
 											<span class="mask__element">
-												<span class="message__text__div">株式会社水野　代表取締役</span>
+												<span class="message__text__div">株式会社水野　代表取締役</span><br>
 												<span class="message__text__name">水野 政行</span>
 											</span>
 										</span>
@@ -295,10 +293,12 @@
 						<div class="section__mv__text__content">
 							<span class="mask">
 								<span class="mask__element">
-									web×リアルを融合した買取ビジネスで、<br>
-									お客様の需要と供給を結ぶサービスを実現。<br>
-									厳選された本物を取り扱い継承していくことで、<br>
-									モノの価値や想いをつないでいく。
+									<strong>
+										web×リアルを融合した買取ビジネスで、<br>
+										お客様の需要と供給を結ぶサービスを実現。<br>
+										厳選された本物を取り扱い継承していくことで、<br>
+										モノの価値や想いをつないでいく。
+									</strong>
 								</span>
 							</span>
 						</div>
@@ -310,20 +310,20 @@
 				<section class="business">
 					<div class="inner">
 						<section class="business__main businessShowLayout js-effect">
-							<div class="businessShowLayout__img mask">
-								<figure class="mask__element">
+							<div class="businessShowLayout__img">
+								<figure>
 									<img src="<%- $path %>../img/service-business-img.jpg" alt="">
 								</figure>
 							</div>
 							<div class="businessShowLayout__text">
 								<h2 class="businessShowLayout__index">
-									<span class="mask"><span class="mask__element">買取ビジネス</span></span>
+									買取ビジネス
 								</h2>
 								<h3 class="businessShowLayout__subindex">
-									<span class="mask"><span class="mask__element">厳選された本物のリユースをより身近に、<br>次の所有者へ継承していく。</span></span>
+									厳選された本物のリユースをより身近に、<br>次の所有者へ継承していく。
 								</h3>
 								<div class="businessShowLayout__content">
-									<span class="mask"><span class="mask__element">買取ビジネスは、貴金属やブランド品、骨董品や硬貨・古銭など、お客様の「不要物」を価値あるものに換えていきます。確かな価値をもつ高価なモノに囲まれたリアル店舗で、お客様の「いらない」と「ほしい」を結んでいきます。</span></span>
+									買取ビジネスは、貴金属やブランド品、骨董品や硬貨・古銭など、お客様の「不要物」を価値あるものに換えていきます。確かな価値をもつ高価なモノに囲まれたリアル店舗で、お客様の「いらない」と「ほしい」を結んでいきます。
 								</div>
 							</div>
 						</section>
@@ -332,15 +332,17 @@
 								<li class="business__detail__thing js-effect">
 									<div class="business__detail__thing__text">
 										<h4 class="business__detail__thing__text__index">
-											<span class="mask"><span class="mask__element">「信頼の証」として、不正品排除を目的とした団体のAACD（日本流通自主管理協会）に加盟。</span></span>
+											「信頼の証」として、不正品排除を目的とした団体のAACD（日本流通自主管理協会）に加盟。
 										</h4>
 										<div class="business__detail__thing__text__content">
-											<span class="mask"><span class="mask__element">日本流通自主管理協会（略称AACD）は、並行輸入品市場での“偽造品”や“不正商品”の流通防止と排除を目指して1988年4月に発足した民間団体です。
-											私たちは消費者の皆様が安心して買い物ができる確かなブランド品市場を形成するために、関係諸機関・団体及び、関連企業等と連携をとり「協会」独自の商品取り扱い自主基準を定め、監視・管理システムを確立しお客様が安心してお買い物をお楽しみいただける環境作りに努めております。</span></span>
+											<p>
+												日本流通自主管理協会（略称AACD）は、並行輸入品市場での“偽造品”や“不正商品”の流通防止と排除を目指して1988年4月に発足した民間団体です。
+												私たちは消費者の皆様が安心して買い物ができる確かなブランド品市場を形成するために、関係諸機関・団体及び、関連企業等と連携をとり「協会」独自の商品取り扱い自主基準を定め、監視・管理システムを確立しお客様が安心してお買い物をお楽しみいただける環境作りに努めております。
+											</p>
 										</div>
 									</div>
-									<div class="business__detail__thing__image mask">
-										<figure class="mask__element">
+									<div class="business__detail__thing__image">
+										<figure>
 											<img src="<%- $path %>../img/service-aacd-img.jpg" alt="">
 										</figure>
 									</div>
@@ -348,19 +350,15 @@
 								<li class="business__detail__thing js-effect">
 									<div class="business__detail__thing__text">
 										<h4 class="business__detail__thing__text__index">
-											<span class="mask"><span class="mask__element">JAPAN TAX FREE SHOP</span></span>
+											JAPAN TAX FREE SHOP
 										</h4>
 										<div class="business__detail__thing__text__content">
-											<div class="mask">
-												<div class="mask__element">
 													<p>
-														当店は免税店となっております。外国人旅行者の方は 消費税8%免除でお買い物をお得に楽しんでいただけます。ぜひ、皆さんご一緒にお立ち寄りください。
+														当店は免税店となっております。外国人旅行者の方は 消費税免除でお買い物をお得に楽しんでいただけます。ぜひ、皆さんご一緒にお立ち寄りください。
 													</p>
 													<p>
 														※パスポートが必要です（コピー不可）合計で￥10,001（税抜）以上のお買い物が対象となります。
 													</p>
-												</div>
-											</div>
 										</div>
 									</div>
 									<div class="business__detail__thing__image mask">
@@ -372,25 +370,21 @@
 								<li class="business__detail__thing js-effect">
 									<div class="business__detail__thing__text">
 										<h4 class="business__detail__thing__text__index">
-											<span class="mask"><span class="mask__element">おたからや 6 銀座店</span></span>
+											おたからや 6 銀座店
 										</h4>
 										<div class="business__detail__thing__text__content">
-											<div class="mask">
-												<div class="mask__element">
 													<p>
 														2018年10月より、東京都中央区銀座6丁目に「おたからや 6
 														銀座店」がオープンしました。高級ブランドのファッションアイテムをはじめ、美術品や骨董品など、高価な物を取り扱っています。銀座という土地にふさわしい、アンティークな空気が漂う上質で居心地の良い空間づくりを目指した店舗となっています。
 													</p>
 													<p>
-														〒104-0061 東京都中央区銀座６丁目XXXXXXXXXXXXXXX
+														〒104-0061 東京都中央区銀座6丁目4－8　曽根ビル1階
 													</p>
-													<p><a href="" target="_blank">> Google Mapで見る</a></p>
-												</div>
-											</div>
+													<p><a class="business__detail__thing__text__link" href="" target="_blank">Google Mapで見る</a></p>
 										</div>
 									</div>
-									<div class="business__detail__thing__image mask">
-										<figure class="mask__element">
+									<div class="business__detail__thing__image">
+										<figure>
 											<img src="<%- $path %>../img/service-otakara-img.jpg" alt="">
 										</figure>
 									</div>
@@ -504,13 +498,13 @@
 								<div class="businessShowLayout__text">
 									<div class="">
 										<h2 class="businessShowLayout__index">
-											<span class="mask"><span class="mask__element">海外向けネット事業</span></span>
+											海外向けネット事業
 										</h2>
 										<h3 class="businessShowLayout__subindex">
-											<span class="mask"><span class="mask__element">ITを活用したグローバル展開で、<br>世界中のより多くの方に価値ある物を。</span></span>
+											ITを活用したグローバル展開で、<br>世界中のより多くの方に価値ある物を。
 										</h3>
 										<div class="businessShowLayout__content">
-											<span class="mask"><span class="mask__element">ITを駆使することで世界とつながれる。世界中にも「いらない」「ほしい」のニーズがあり、相互を結んでいく事業を展開。世界TOPクラスの厳選されたブランド品を、ITを活用して世界中へ届けていくことで、リユースのグローバル規模へと。</span></span>
+											ITを駆使することで世界とつながれる。世界中にも「いらない」「ほしい」のニーズがあり、相互を結んでいく事業を展開。世界TOPクラスの厳選されたブランド品を、ITを活用して世界中へ届けていくことで、リユースのグローバル規模へと。
 										</div>
 									</div>
 								</div>
@@ -521,19 +515,15 @@
 									<li class="business__detail__thing js-effect">
 										<div class="business__detail__thing__text">
 											<h4 class="business__detail__thing__text__index">
-												<span class="mask"><span class="mask__element">ネットEコマースのルイ・ヴィトンの中古品に特化したリユース新専門店「LooV」。</span></span>
+												ネットEコマースのルイ・ヴィトンの中古品に特化したリユース新専門店「LooV」
 											</h4>
-											<div class="business__detail__thing__text__content">
-												<span class="mask">
-													<span class="mask__element">
-														Louis Vuitton」に特化したリユース店「LooV（ルーヴ）」を、海外ネット向け販売として展開していきます。「LooV」の由来は、『Louis Vuitton＋loop＝輪』Louis
-														Vuittonがリサイクルするストア。ネットEコマースを利用して上質なブランドに特化したサービスは、今までにない店舗形態。海外ユーザーをターゲットに上質なブランドを循環させていくことで、より多くの方に浸透できるよう努めています。
-													</span>
-												</span>
+											<div class="business__detail__thing__text__content">												
+												Louis Vuitton」に特化したリユース店「LooV（ルーヴ）」を、海外ネット向け販売として展開していきます。「LooV」の由来は、『Louis Vuitton＋loop＝輪』Louis
+												Vuittonがリサイクルするストア。ネットEコマースを利用して上質なブランドに特化したサービスは、今までにない店舗形態。海外ユーザーをターゲットに上質なブランドを循環させていくことで、より多くの方に浸透できるよう努めています。													
 											</div>
 										</div>
-										<div class="business__detail__thing__image mask">
-											<figure class="mask__element">
+										<div class="business__detail__thing__image">
+											<figure>
 												<img src="<%- $path %>../img/service-foreign-loov.jpg" alt="">
 											</figure>
 										</div>
@@ -631,7 +621,7 @@
 									<th>
 										加盟団体
 									</th>
-									<td>AACD（日本流通自主管理会）会員番号 / R-0100 /td>
+									<td>AACD（日本流通自主管理会）会員番号 / R-0100 </td>
 								</tr>
 								<tr>
 									<th>
@@ -640,7 +630,21 @@
 									<td>
 										グローバル法律事務所<br>
 										あすかコンサルティング株式会社<br>
-										ステラ行政書士事務所</td>
+										ステラ行政書士事務所<br>
+										ゆたか税理士法人
+									</td>
+								</tr>
+								<tr>
+									<th>
+										取引先銀行
+									</th>
+									<td>
+										三井住友銀行<br>
+										香川銀行<br>
+										近畿大阪銀行<br>
+										関西アーバン銀行<br>
+										池田泉州銀行
+									</td>
 								</tr>
 							</table>
 							<section class="officeMap">
@@ -649,7 +653,7 @@
 										TOKYO HEAD OFFICE
 									</h3>
 									<div>
-										〒530-0027 大阪市北区堂山町1-5 三共梅田ビル3階
+										〒104-0061 東京都中央区銀座6丁目4－8　曽根ビル1階
 										TEL：06-6232-8066　FAX：06-6232-8099
 										最寄駅：●●線●●駅より徒歩5分、●●線●●駅より徒歩5分、●●線●●駅より徒歩5分
 									</div>
@@ -856,115 +860,15 @@
 						<div class="recruitInfo__details">
 							<section class="recruitInfo__detail">
 								<h4 class="recruitInfo__detail__index">
-									総合職(営業・販売・仕入)
+									<span>総合職(営業・販売・仕入)</span>
 								</h4>
 								<div class="recruitInfo__detail__content">
-									<table class="companyInfo">
-										<tr>
-											<th>
-												職種
-											</th>
-											<td>
-												総合職(営業・販売・仕入)
-											</td>
-										</tr>
-										<tr>
-											<th>
-												勤務地
-											</th>
-											<td>
-												【大阪・大阪市エリア】 <br>
-												大阪市北区堂山町1-5 三共梅田ビル3階 <br>
-												大阪市中央区東心斎橋1-10-12 <br>
-												【東京・台東区エリア】 <br>
-												東京都台東区上野5-26-5　日清ビル5階
-											</td>
-										</tr>
-										<tr>
-											<th>
-												勤務時間
-											</th>
-											<td>
-												9：30～18：30　休憩1時間　所定労働時間：8時間
-											</td>
-										</tr>
-										<tr>
-											<th>
-												給与
-											</th>
-											<td>
-												月給：303,215円 <br>
-												【内訳】 <br>
-												基本給：200,000円 <br>
-												一律総合職手当：20,000円／固定残業代：83,215円<br>
-												※55時間分の固定残業代が含まれます。 残業が55時間を超えた場合、超過分を支給します。<br>
-												【対象学歴】 <br>
-												大卒・大学院卒・専門学校卒 <br>
-												※支給額は対象学歴一律です。
-											</td>
-										</tr>
-										<tr>
-											<th>
-												諸手当
-											</th>
-											<td>
-												交通費支給（2万円まで／月） <br>
-												地域手当1万円（東京のみ） <br>
-												表彰制度（年間MVP・優秀賞・新人賞。祝い金を支給）
-											</td>
-										</tr>
-										<tr>
-											<th>
-												昇給
-											</th>
-											<td>
-												年1回　毎年12月に個人評価の見直しを行います。
-											</td>
-										</tr>
-										<tr>
-											<th>
-												賞与
-											</th>
-											<td>会社業績と個人成績を総合的に評価して12月に支給
-											</td>
-										</tr>
-										<tr>
-											<th>
-												休日休暇
-											</th>
-											<td>
-												■総合職 <br>
-												月9回　シフト制※土日祝日をベースに休日を取得することも可能 <br>
-												夏季休暇4日・年末年始5日 <br>
-												その他休暇：慶弔休暇、有給休暇 <br>
-												★年間休日：117日★ <br>
-												※夏季休暇・年末年始休暇は会社カレンダーに準ずるものとします。 したがって、年度によっては各休暇日数が前後する場合があります。
-											</td>
-										</tr>
-										<tr>
-											<th>
-												保険
-											</th>
-											<td>各種社会保険完備（厚生年金保険、健康保険、労災保険、雇用保険）</td>
-										</tr>
-										<tr>
-											<th>
-												待遇
-											</th>
-											<td>ロッカー・休憩スペースあり、定期健康診</td>
-										</tr>
-										<tr>
-											<th>
-												試用期間
-											</th>
-											<td>あり （入社後6ヶ月間 ）<br>その他条件は本採用時と変更なし</td>
-										</tr>
-									</table>
+									<%- include('_include/recruit-sogoshoku.ejs') %>
 								</div>
 							</section>
 							<section class="recruitInfo__detail">
 								<h4 class="recruitInfo__detail__index">
-									総合職(営業・販売・仕入)
+									<span>総合職(営業・販売・仕入)</span>
 								</h4>
 								<div class="recruitInfo__detail__content">
 									Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam quisquam, vel sed quasi, veritatis nemo esse fugiat natus deserunt quam nobis consequatur ea voluptatem itaque suscipit in laborum dicta rem.
@@ -972,7 +876,7 @@
 							</section>
 							<section class="recruitInfo__detail">
 								<h4 class="recruitInfo__detail__index">
-									総合職(営業・販売・仕入)
+									<span>総合職(営業・販売・仕入)</span>
 								</h4>
 								<div class="recruitInfo__detail__content">
 									kari
@@ -980,13 +884,13 @@
 							</section>
 							<section class="recruitInfo__detail">
 								<h4 class="recruitInfo__detail__index">
-									総合職(営業・販売・仕入)
+									<span>総合職(営業・販売・仕入)</span>
 								</h4>
 								<div class="recruitInfo__detail__content">
 									kari
 								</div>
 							</section>
-							<div class="button"><a href="">エントリー</a></div>
+							<div class="button"><a href="#contact">エントリー</a></div>
 						</div>
 					</section>
 				</div>
@@ -1055,7 +959,7 @@
 								</dl>
 								<dl class="formTable__col__row">
 									<dt class="mfp must">電話番号</dt>
-									<dd class="mfp"><input type="tel" data-type="tel" name="電話番号" place-holder="000-0000-0000" data-min="9"></dd>
+									<dd class="mfp"><input type="tel" data-type="tel" name="電話番号" placeholder="0662328066（ハイフンなし半角数字）" data-min="9"></dd>
 								</dl>
 							</div>
 							<div class="formTable__col">
