--- a/dev/src/scss/_components.scss
+++ b/dev/src/scss/_components.scss
@@ -18,6 +18,28 @@
     display: inline-block;
     position: relative;
 
+    &:before{
+        content:"";
+        width: 0%;
+        height: 100%;
+        position: absolute;
+        z-index: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        // left: 0;
+        transition: transition();
+    }
+
+    @include mouseOver(){
+        &:before{
+            width: 100%;
+            right: auto;
+            left: 0;
+        }
+    }
+
+
     @include mq( sp ){
         margin-right: auto;
         margin-left: auto;
@@ -35,6 +57,7 @@
         box-sizing: border-box;
         padding: 10px 20px;
         position: relative;
+        z-index: 1;
         display: block;
         border: 1px solid;
         text-align: center;
