--- a/dev/src/scss/_components.scss
+++ b/dev/src/scss/_components.scss
@@ -47,8 +47,10 @@
     }   
 
     button{
+        transition: transition();
         background: none;
         font-size: 1em;
+        appearance: none;        
     }
     
     a,
