テキスト修正

--- a/dev/src/ejs/index.ejs
+++ b/dev/src/ejs/index.ejs
@@ -47,20 +47,20 @@
 								</span>
 							</span>
 						</h3>
-						<div class="section__mv__text__content">_
-								<span class="mask">
-									<span class="mask__element">
-										<strong>
-											これだけモノに溢れた現代において、<br>
-											本物の価値に出会うことは幸せなことだと思う。<br>
-											この上質なモノの価値や佇まいを、次の人へ伝え、継承していく。<br>
-											そして、バトンパスによって、ストーリーは続いていく。<br>
-											私たちが目指すのは、上質なモノが身近にある循環型の社会。<br>
-											確かな価値との新しい出会い、リユースでつないでいく未来。<br>
-											そんなストーリーのサイクルを、人の手で受け継がれる日常を。
-										</strong>
-									</span>
-								</span>_
+						<div class="section__mv__text__content">
+							<span class="mask">
+								<span class="mask__element">
+									<strong>
+										これだけモノに溢れた現代において、<br>
+										本物の価値に出会うことは幸せなことだと思う。<br>
+										この上質なモノの価値や佇まいを、次の人へ伝え、継承していく。<br>
+										そして、バトンパスによって、ストーリーは続いていく。<br>
+										私たちが目指すのは、上質なモノが身近にある循環型の社会。<br>
+										確かな価値との新しい出会い、リユースでつないでいく未来。<br>
+										そんなストーリーのサイクルを、人の手で受け継がれる日常を。
+									</strong>
+								</span>
+							</span>
 						</div>
 					</section>
 				</section>
@@ -353,16 +353,16 @@
 											JAPAN TAX FREE SHOP
 										</h4>
 										<div class="business__detail__thing__text__content">
-													<p>
-														当店は免税店となっております。外国人旅行者の方は 消費税免除でお買い物をお得に楽しんでいただけます。ぜひ、皆さんご一緒にお立ち寄りください。
-													</p>
-													<p>
-														※パスポートが必要です（コピー不可）合計で￥10,001（税抜）以上のお買い物が対象となります。
-													</p>
+											<p>
+												当店は免税店となっております。外国人旅行者の方は 消費税免除でお買い物をお得に楽しんでいただけます。ぜひ、皆さんご一緒にお立ち寄りください。
+											</p>
+											<p>
+												※パスポートが必要です（コピー不可）合計で￥10,001（税抜）以上のお買い物が対象となります。
+											</p>
 										</div>
 									</div>
-									<div class="business__detail__thing__image mask">
-										<figure class="mask__element">
+									<div class="business__detail__thing__image">
+										<figure>
 											<img src="<%- $path %>../img/service-taxfree-img.jpg" alt="">
 										</figure>
 									</div>
@@ -373,14 +373,14 @@
 											おたからや 6 銀座店
 										</h4>
 										<div class="business__detail__thing__text__content">
-													<p>
-														2018年10月より、東京都中央区銀座6丁目に「おたからや 6
-														銀座店」がオープンしました。高級ブランドのファッションアイテムをはじめ、美術品や骨董品など、高価な物を取り扱っています。銀座という土地にふさわしい、アンティークな空気が漂う上質で居心地の良い空間づくりを目指した店舗となっています。
-													</p>
-													<p>
-														〒104-0061 東京都中央区銀座6丁目4－8　曽根ビル1階
-													</p>
-													<p><a class="business__detail__thing__text__link" href="" target="_blank">Google Mapで見る</a></p>
+											<p>
+												2018年10月より、東京都中央区銀座6丁目に「おたからや 6
+												銀座店」がオープンしました。高級ブランドのファッションアイテムをはじめ、美術品や骨董品など、高価な物を取り扱っています。銀座という土地にふさわしい、アンティークな空気が漂う上質で居心地の良い空間づくりを目指した店舗となっています。
+											</p>
+											<p>
+												〒104-0061 東京都中央区銀座6丁目4－8　曽根ビル1階
+											</p>
+											<p><a class="business__detail__thing__text__link" href="" target="_blank">Google Mapで見る</a></p>
 										</div>
 									</div>
 									<div class="business__detail__thing__image">
@@ -612,10 +612,12 @@
 										事業内容
 									</th>
 									<td>
-										■ブランド品、コレクション商品の買取・販売・楽天ショップ「みづの屋」の運営 <br>
-										■ハイブランドショップ「みづの屋」の運営 <br>
-										■買取専門店「おたからや梅田店」「おたからや心斎橋店」「おたからや上野御徒町店」「おたからや 6 銀座店」の運営 <br>
-										■ＥＣショップ「楽天」「Amazon」「Yahoo！」海外サイト「eBay」「楽天グローバル」「REEBONZ」「淘宝」への出店</td>
+										■ブランド品、コレクション商品の買取・販売<br>
+										■ハイブランドショップ「みづの屋」の運営<br>
+										■買取専門店「おたからや梅田店」「おたからや心斎橋店」「おたからや上野御徒町店」の運営<br>
+										■買取・販売店「おたからや 6 銀座店」の運営<br>
+										■ＥＣショップ「楽天」「Amazon」「Yahoo！」海外サイト「eBay」「楽天グローバル」「REEBONZ」「淘宝」への出店
+									</td>
 								</tr>
 								<tr>
 									<th>
