--- a/dev/src/ejs/index.ejs
+++ b/dev/src/ejs/index.ejs
@@ -124,13 +124,14 @@
 											</span>
 										</span>
 									</p>
-									<p>
+									<p class="message__name">
 										<span class="mask">
 											<span class="mask__element">
 												<span class="message__text__div">株式会社水野　代表取締役</span><br>
-												<span class="message__text__name">水野 政行</span>
+												<strong class="message__text__name">水野 政行</strong>
 											</span>
 										</span>
+										<span class="message__name__sign"><span class="mask"><span class="mask__element"><i class="message__name__sign__text"></i></span></span></span>
 									</p>
 								</div>
 							</section>
@@ -490,8 +491,8 @@
 						<!-- *** 海外向け -->
 						<section class="business__oversea">
 							<section class="business__main businessShowLayout js-effect">
-								<div class="businessShowLayout__img mask">
-									<figure class="mask__element">
+								<div class="businessShowLayout__img">
+									<figure>
 										<img src="<%- $path %>../img/service-foreign-img.jpg" alt="">
 									</figure>
 								</div>
