--- a/dev/src/ejs/index.ejs
+++ b/dev/src/ejs/index.ejs
@@ -6,7 +6,7 @@
 <!DOCTYPE html>
 <html>
 <%- include( '_include/head.ejs' ); %>
-<body class="top">
+<body id="pageTop" class="top">
 	<%- include( '_include/_loadingAnim.ejs' ); %>
 	<%- include( '_include/header.ejs' ); %>
 	<section class="mv">
